[submodule packages/peep-dired]  Add submodule
* .gitmodules:  Add submodule (packages/peep-dired).
* packages/peep-dired:  New submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "packages/company-emoji"]
 	path = packages/company-emoji
 	url = git@github.com:tonyaldon/company-emoji.git
+[submodule "packages/peep-dired"]
+	path = packages/peep-dired
+	url = git@github.com:tonyaldon/peep-dired.git
