[submodule packages/posframe]  Add submodule
* .gitmodules:  Add submodule (packages/posframe).
* packages/posframe:  New submodule.
* init.el:  Load package (posframe).

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "packages/peep-dired"]
 	path = packages/peep-dired
 	url = git@github.com:tonyaldon/peep-dired.git
+[submodule "packages/posframe"]
+	path = packages/posframe
+	url = git@github.com:tonyaldon/posframe.git
